<resources>
    <string name="app_name">Memory Leak Simulation</string>
    <string name="empty_activity">dummy activity</string>
    <string name="leaked_activity">leak activity</string>
    <string name="activities_statistics" formatted="false">%d activities is alive. %d activities is destroyed</string>
    <string name="title_activity_leaking">LeakingActivity</string>
    <string name="live_leaked_activity">Live leaked activity</string>
    <string name="live_empty_activity">Live empty activity</string>
    <string name="destroyed_empty_activity">Destroyed empty activity</string>
    <string name="destroyed_leaked_activity">Destroyed leaked activity</string>
    <string name="show_destroyed_activity_line">Show destroyed empty activity line</string>
    <string name="hide_destroyed_activity_line">Hide destroyed empty activity line</string>
    <string name="show_live_activity_line">Show live empty activity line</string>
    <string name="hide_live_activity_line">Hide live empty activity line</string>
    <string name="show_destroyed_leaked_activity_line">Show destroyed leaked activity line</string>
    <string name="hide_destroyed_leaked_activity_line">Hide destroyed leaked activity line</string>
    <string name="show_live_leaked_activity_line">Show live leaked activity line</string>
    <string name="hide_live_leaked_activity_line">Hide live leaked activity line</string>
</resources>
